--- a/index.html
+++ b/index.html
@@ -392,10 +392,10 @@
 
   <!-- ---------- HERO SECTION ---------- -->
   <section class="hero">
-    <h2>Освой SQL и стань инженером данных</h2>
+    <h2>Освой SQL просто и интересно</h2>
     <p>
       Курс для тех, кто хочет быстро и эффективно научиться работать с реляционными базами данных. Развивайте навыки
-      написания запросов, оптимизации и анализа данных уже сегодня!
+      написания запросов, оптимизации и инженерии данных уже сегодня!
     </p>
     <button class="btn-cta">Начать обучение</button>
   </section>
