--- a/index.html
+++ b/index.html
@@ -38,20 +38,6 @@
     nav a:hover {
       color: #10b981;
     }
-    header {
-      background: #1e293b;
-      color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-    header img {
-      height: 80px;
-      margin-bottom: 1rem;
-    }
-    header h1 {
-      font-size: 2rem;
-      margin: 0;
-    }
     .hero {
       background: #f1f5f9;
       padding: 3rem 2rem;
@@ -121,12 +107,12 @@
     }
     footer {
       text-align: center;
-      font-size: 0.9rem;
-      color: #6b7280;
+      font-size: 0.95rem;
+      color: #374151;
       padding: 2rem;
     }
     @media (max-width: 600px) {
-      .hero h2, .section h3, header h1 {
+      .hero h2, .section h3 {
         font-size: 1.3rem;
       }
       .cta-button {
@@ -144,22 +130,18 @@
   <nav>
     <a href="#about">О курсе</a>
     <a href="#program">Программа</a>
-    <a href="#example">Пример задачи</a>
+    <a href="#example">Примеры задач</a>
     <a href="#reviews">Отзывы</a>
     <a href="#join">Поступить</a>
   </nav>
 
-  <header>
-    <img src="ИТОГОВЫЙ ИТОГ БОЛЬШАЯ ФОТО.png" alt="Логотип" />
-    <h1>SQL для инженеров и аналитиков</h1>
-  </header>
-
   <section class="hero" id="about">
     <h2>Обучение + Практика на 140 задачах</h2>
     <ul>
-      <li>Для новичков и junior специалистов</li>
-      <li>Без дедлайнов, в комфортном темпе</li>
-      <li>Поддержка в Telegram-чате от автора курса</li>
+      <li>🎯 Для новичков и junior специалистов</li>
+      <li>📆 Без дедлайнов, в комфортном темпе</li>
+      <li>💬 Поддержка в Telegram-чате от автора курса</li>
+      <li>🧠 2 базы данных, специально разработанные под задачи курса</li>
     </ul>
     <a class="cta-button" href="https://stepik.org/course/XXXX" id="join">Поступить на курс</a>
   </section>
@@ -178,27 +160,42 @@
   </section>
 
   <section class="section" id="example">
-    <h3>Пример задачи</h3>
-    <p><strong>Задача:</strong> Вывести водителей, нанятых в 2021 году.</p>
+    <h3>Примеры задач</h3>
+
+    <p><strong>🔹 Уровень 1:</strong> Найти всех клиентов с gmail-адресом</p>
+    <div class="code-block">
+<pre><code>SELECT *
+FROM clients
+WHERE email LIKE '%@gmail.com';</code></pre>
+    </div>
+    <p>👩‍💻 Аналитику — для сегментации клиентов. Дата-инженеру — для очистки/фильтрации e-mail данных.</p>
+
+    <p><strong>🔹 Уровень 2:</strong> Подсчитать средний рейтинг по каждому водителю</p>
     <div class="code-block">
 <pre><code>SELECT driver_id,
-       first_name,
-       last_name,
-       hire_date
-FROM drivers
-WHERE EXTRACT(YEAR FROM hire_date) = 2021;
-</code></pre>
+       ROUND(AVG(rating), 2) AS avg_rating
+FROM driver_ratings
+GROUP BY driver_id;</code></pre>
     </div>
-    <p>📌 Полезно для анализа HR-метрик и построения витрин по водителям.</p>
+    <p>📊 Аналитику — для построения витрин по качеству. Инженеру — для агрегации перед BI.</p>
+
+    <p><strong>🔹 Уровень 3:</strong> Найти предыдущую поездку каждого клиента</p>
+    <div class="code-block">
+<pre><code>SELECT client_id,
+       start_time,
+       LAG(start_time) OVER (PARTITION BY client_id ORDER BY start_time) AS previous_trip
+FROM drives;</code></pre>
+    </div>
+    <p>🧩 Продвинутая задача на оконную функцию. Полезна для построения временных признаков и анализа повторных поездок.</p>
   </section>
 
   <section class="section">
     <h3>Что вас ждёт</h3>
     <ul>
-      <li>140+ задач и 120 автотестов</li>
-      <li>2 учебные базы данных</li>
-      <li>Поддержка от практика: автор отвечает лично</li>
-      <li>Мини-проект по построению витрин данных</li>
+      <li>✅ 140+ задач и 120 автотестов</li>
+      <li>🗃️ 2 учебные базы данных, разработанные под задачи</li>
+      <li>🧑‍🏫 Поддержка от практика: автор отвечает лично</li>
+      <li>📦 Мини-проект по построению витрин данных</li>
     </ul>
   </section>
 
@@ -219,7 +216,9 @@ WHERE EXTRACT(YEAR FROM hire_date) = 2021;
   </section>
 
   <footer>
-    Курс доступен на платформе Stepik. Все права защищены © 2025
+    Курс доступен на платформе Stepik.<br />
+    С любовью к данным ❤️<br />
+    Все права защищены © 2025
   </footer>
 </body>
 </html>
