--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ ORDER BY orders_count DESC;</code></pre>
 
   <!-- Footer / CTA -->
   <footer class="container footer">
-    <a href="https://stepik.org" class="btn-cta">Пойти на курс</a>
+    <a href="https://stepik.org/a/210499" class="btn-cta">Пойти на курс</a>
     <p>Сертификат Stepik. Гарантия качества.</p>
   </footer>
 
