--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
     th {background:#eee;}
     footer {background:#f8f8f8; text-align:center; padding:10px 0; margin-top:40px;}
   </style>
-  <title>Обо мне</title>
+  <title>Наши курсы</title>
 </head>
 <body>
 <header>
@@ -30,11 +30,18 @@
 </header>
 <div class="container">
 
-<section class="section">
-  <h1>Привет! Я — Дмитрий, Data Engineer</h1>
-  <p>Помогаю аналитикам и инженерам переходить от шаблонных SELECT к реальному мышлению в SQL через практические кейсы.</p>
-  <a class="cta" href="products.html">Все курсы</a>
-</section>
+<h1>Наши курсы</h1>
+<table>
+  <thead>
+    <tr><th>Курс</th><th>Уровень</th><th>Задач</th><th>Ссылка</th></tr>
+  </thead>
+  <tbody>
+    <tr><td>SQL для инженеров и аналитиков с нуля</td><td>Стартовый</td><td>280+</td><td><a href="sql-base.html">Подробнее</a></td></tr>
+    <tr><td>100 задач: уровень Junior</td><td>Junior</td><td>100</td><td><a href="sql-junior.html">Подробнее</a></td></tr>
+    <tr><td>100 задач: уровень Middle</td><td>Middle</td><td>100</td><td><a href="sql-middle.html">Подробнее</a></td></tr>
+    <tr><td>100 задач: уровень Upper-Middle</td><td>Upper-Middle</td><td>100</td><td><a href="sql-upper.html">Подробнее</a></td></tr>
+  </tbody>
+</table>
 
 </div>
 <footer>
